--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -112,7 +112,7 @@
     <string name="check_vehicle">Check</string>
     <string name="verify">Verify</string>
     <string name="verify_plate_chasis">Please verify your plate &amp; chassis number.</string>
-    <string name="verify_plate_chasis_required">Plate Number &amp; Chassis Number required</string>
+    <string name="verify_plate_chasis_required">Plate Number required</string>
     <string name="current_password">Current Password *</string>
     <string name="new_password">New Password *</string>
     <string name="show_me_directions"><u>Show me directions</u></string>
@@ -146,4 +146,8 @@
     <string name="book_now_message">Do you like to book now?</string>
     <string name="enquiry_sent">Enquiry sent successfully</string>
     <string name="order_no">Order Number</string>
+    <string name="account_added">Your account has been successfully created</string>
+    <string name="service_pricing_dept">KIA Service Pricing dept.</string>
+    <string name="service_pricing_enquiry">Kia Service pricing enquiry</string>
+    <string name="service_pricing_content">Please let me know the details about service pricing.</string>
 </resources>
