--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -25,7 +25,7 @@
     <string name="action_settings">Settings</string>
     <string name="menu_slideshow">Slideshow</string>
 
-    <string name="menu_home">الصفحة الرئيسية</string>
+    <string name="menu_home">الصفحة الرئيسة</string>
     <string name="menu_notification">إشعارات</string>
     <string name="menu_mybooking">الحجز</string>
     <string name="menu_myvehicle">سيارتي</string>
@@ -88,7 +88,7 @@
     <string name="my_profile">المعلومات الشخصية</string>
     <string name="user_name">اسم المستخدم</string>
     <string name="mobile_number">رقم الموبايل</string>
-    <string name="email_id">البريد الإليكتروني</string>
+    <string name="email_id">البريد الإلكترونى</string>
     <string name="reset_password">اعادة تعيين كلمة السر</string>
     <string name="update">تحديث</string>
     <string name="edit">تعديل</string>
@@ -131,23 +131,23 @@
     <string name="resend_otp">إعادة إرسال OTP</string>
     <string name="save">حفظ</string>
     <string name="send">إرسال</string>
-    <string name="accident_message">الإبلاغ عن الحادث. يرجى النظر في هذا والقيام بالمطلوب</string>
+    <string name="accident_message">لقد تعرضت سيارتى الى حادث, برجاء التواصل %1$s– رقم اللوحة %2$s</string>
     <string name="vehicle_add_success">تمت إضافة السيارة بنجاح</string>
-    <string name="search_service">مركز خدمة البحث</string>
-    <string name="select_kilometer">Select Kilometer</string>
-    <string name="from">From</string>
-    <string name="to">To</string>
-    <string name="spare_parts_dept">KIA Spare Parts dept.</string>
-    <string name="spare_parts_subject">Kia Genuine parts enquiry</string>
-    <string name="spare_parts_content">Please let me know the details about below kia genuine spare parts.</string>
-    <string name="delete">Delete</string>
-    <string name="delete_confirm_dialog">Are you sure you want to delete?</string>
-    <string name="book_now">Book Now</string>
-    <string name="book_now_message">Do you like to book now?</string>
-    <string name="enquiry_sent">Enquiry sent successfully</string>
-    <string name="order_no">Order Number</string>
-    <string name="account_added">Your account has been successfully created</string>
-    <string name="service_pricing_dept">KIA Service Pricing dept.</string>
-    <string name="service_pricing_enquiry">Kia Service pricing enquiry</string>
-    <string name="service_pricing_content">Please let me know the details about service pricing.</string>
+    <string name="search_service">إبحث عن مركز الخدمة</string>
+    <string name="select_kilometer">حدد كيلومتر</string>
+    <string name="from">من</string>
+    <string name="to">إلى</string>
+    <string name="spare_parts_dept">قسم قطع غيار كيا</string>
+    <string name="spare_parts_subject">الاستعلام عن قطع غيار كيا الأصلية</string>
+    <string name="spare_parts_content">واسمحوا لي أن أعرف التفاصيل حول قطع غيار كيا الأصلية أدناه.</string>
+    <string name="delete">حذف</string>
+    <string name="delete_confirm_dialog">هل أنت متأكد أنك تريد حذف؟</string>
+    <string name="book_now">احجز الآن</string>
+    <string name="book_now_message">هل تحب الحجز الآن؟</string>
+    <string name="enquiry_sent">تم إرسال الاستفسار بنجاح</string>
+    <string name="order_no">رقم الطلب</string>
+    <string name="account_added">تم إنشاء حسابك بنجاح</string>
+    <string name="service_pricing_dept">قسم تسعير خدمة كيا</string>
+    <string name="service_pricing_enquiry">استعلام عن أسعار خدمة كيا</string>
+    <string name="service_pricing_content">واسمحوا لي أن أعرف التفاصيل حول أسعار الخدمة.</string>
 </resources>
